# RayTracing

./: .gitignore
Uebung1/rtgi-2021-a01/: Makefile  config.status
Uebung1/rtgi-2021-a01/driver/: Makefile  main.cpp
Uebung1/rtgi-2021-a01/gi/: Makefile  primary-hit.cpp
Uebung1/rtgi-2021-a01/libgi/: Makefile  camera.cpp  intersect.h
Uebung1/rtgi-2021-a01/rt/: Makefile
Uebung1/rtgi-2021-a01/scripts/: Makefile
Uebung2/rtgi-2021-a02/libgi/: intersect.h
Uebung2/rtgi-2021-a02/scripts/: a2-sibenik  a2-sponza
Uebung3/rtgi-2021-a03/gi/: primary-hit.cpp
Uebung3/rtgi-2021-a03/libgi/: material.cpp  util.h
Uebung3/rtgi-2021-a03/scripts/: a3-sibenik
Uebung4/rtgi-2021-a04/: configure  configure.ac
Uebung4/rtgi-2021-a04/driver/: Makefile.in  interaction.cpp
Uebung4/rtgi-2021-a04/gi/: Makefile.am  Makefile.in  direct.cpp  direct.h
Uebung4/rtgi-2021-a04/libgi/: Makefile.am  Makefile.in  material.cpp  scene.cpp  scene.h
Uebung4/rtgi-2021-a04/scripts/: Makefile.am  Makefile.in  a3-brdf-test  a3-sibenik  a4-brdf-test  a4-sibenik
Uebung6/rtgi-2020-a06/: AUTHORS  Makefile.in  aclocal.m4  configure  configure.ac
Uebung6/rtgi-2020-a06/driver/: Makefile.am  Makefile.in  interaction.cpp  main.cpp
Uebung6/rtgi-2020-a06/gi/: Makefile.in  (+3 more)
Uebung7/rtgi-2020-a07/: Makefile.in  README  configure  configure.ac
Uebung7/rtgi-2020-a07/libgi/: Makefile.am  Makefile.in  context.h  discrete_distributions.cpp  intersect.h  material.cpp  random.h  rt.cpp  scene.cpp  timer.h
Uebung8/rtgi-2020-a08/: configure  configure.ac
Uebung9/rtgi-2020-a09/: configure  configure.ac
(+83 files in other folders)
